HW4/gen/Q2Parser.py
# Generated from /home/pouorix/Desktop/compilerHW4/Me/IUSTCompiler/HW4/Q2.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Q2Parser ( Parser ):

    grammarFileName = "Q2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'System.out.println'", "<INVALID>", "'boolean'", 
                     "'class'", "'else'", "'extends'", "'false'", "'if'", 
                     "'int'", "'length'", "'main'", "'new'", "'public'", 
                     "'return'", "'static'", "'String'", "'this'", "'true'", 
                     "'void'", "'while'", "'='", "'>'", "<INVALID>", "'>='", 
                     "'<='", "'!'", "'||'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "','", "'.'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "BOOL", "BOOLEAN", "CLASS", 
                      "ELSE", "EXTENDS", "FALSE", "IF", "INT", "LENGTH", 
                      "MAIN", "NEW", "PUBLIC", "RETURN", "STATIC", "STRING", 
                      "THIS", "TRUE", "VOID", "WHILE", "ASSIGN", "GT", "OP", 
                      "GE", "LE", "BANG", "OR", "L_PAREN", "R_PAREN", "L_BRACK", 
                      "R_BRACK", "L_BRACE", "R_BRACE", "COMMA", "DOT", "SEMI", 
                      "Identifier", "INT_VAL", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_type_t = 5
    RULE_statement = 6
    RULE_expression = 7

    ruleNames =  [ "program", "mainClass", "classDeclaration", "varDeclaration", 
                   "methodDeclaration", "type_t", "statement", "expression" ]

    EOF = Token.EOF
    T__0=1
    BOOL=2
    BOOLEAN=3
    CLASS=4
    ELSE=5
    EXTENDS=6
    FALSE=7
    IF=8
    INT=9
    LENGTH=10
    MAIN=11
    NEW=12
    PUBLIC=13
    RETURN=14
    STATIC=15
    STRING=16
    THIS=17
    TRUE=18
    VOID=19
    WHILE=20
    ASSIGN=21
    GT=22
    OP=23
    GE=24
    LE=25
    BANG=26
    OR=27
    L_PAREN=28
    R_PAREN=29
    L_BRACK=30
    R_BRACK=31
    L_BRACE=32
    R_BRACE=33
    COMMA=34
    DOT=35
    SEMI=36
    Identifier=37
    INT_VAL=38
    WS=39
    COMMENT=40
    LINE_COMMENT=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def mainClass(self):
            return self.getTypedRuleContext(Q2Parser.MainClassContext,0)


        def EOF(self):
            return self.getToken(Q2Parser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q2Parser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(Q2Parser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return Q2Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = Q2Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.mainClass()
            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Q2Parser.CLASS:
                self.state = 17
                self.classDeclaration()
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 23
            self.match(Q2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def CLASS(self):
            return self.getToken(Q2Parser.CLASS, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(Q2Parser.Identifier)
            else:
                return self.getToken(Q2Parser.Identifier, i)

        def L_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(Q2Parser.L_BRACE)
            else:
                return self.getToken(Q2Parser.L_BRACE, i)

        def PUBLIC(self):
            return self.getToken(Q2Parser.PUBLIC, 0)

        def STATIC(self):
            return self.getToken(Q2Parser.STATIC, 0)

        def VOID(self):
            return self.getToken(Q2Parser.VOID, 0)

        def MAIN(self):
            return self.getToken(Q2Parser.MAIN, 0)

        def L_PAREN(self):
            return self.getToken(Q2Parser.L_PAREN, 0)

        def STRING(self):
            return self.getToken(Q2Parser.STRING, 0)

        def L_BRACK(self):
            return self.getToken(Q2Parser.L_BRACK, 0)

        def R_BRACK(self):
            return self.getToken(Q2Parser.R_BRACK, 0)

        def R_PAREN(self):
            return self.getToken(Q2Parser.R_PAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(Q2Parser.StatementContext,0)


        def R_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(Q2Parser.R_BRACE)
            else:
                return self.getToken(Q2Parser.R_BRACE, i)

        def getRuleIndex(self):
            return Q2Parser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClass" ):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = Q2Parser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self.match(Q2Parser.CLASS)
            self.state = 26
            self.match(Q2Parser.Identifier)
            self.state = 27
            self.match(Q2Parser.L_BRACE)
            self.state = 28
            self.match(Q2Parser.PUBLIC)
            self.state = 29
            self.match(Q2Parser.STATIC)
            self.state = 30
            self.match(Q2Parser.VOID)
            self.state = 31
            self.match(Q2Parser.MAIN)
            self.state = 32
            self.match(Q2Parser.L_PAREN)
            self.state = 33
            self.match(Q2Parser.STRING)
            self.state = 34
            self.match(Q2Parser.L_BRACK)
            self.state = 35
            self.match(Q2Parser.R_BRACK)
            self.state = 36
            self.match(Q2Parser.Identifier)
            self.state = 37
            self.match(Q2Parser.R_PAREN)
            self.state = 38
            self.match(Q2Parser.L_BRACE)
            self.state = 39
            self.statement()
            self.state = 40
            self.match(Q2Parser.R_BRACE)
            self.state = 41
            self.match(Q2Parser.R_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def CLASS(self):
            return self.getToken(Q2Parser.CLASS, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(Q2Parser.Identifier)
            else:
                return self.getToken(Q2Parser.Identifier, i)

        def L_BRACE(self):
            return self.getToken(Q2Parser.L_BRACE, 0)

        def R_BRACE(self):
            return self.getToken(Q2Parser.R_BRACE, 0)

        def EXTENDS(self):
            return self.getToken(Q2Parser.EXTENDS, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q2Parser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(Q2Parser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q2Parser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(Q2Parser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return Q2Parser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = Q2Parser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(Q2Parser.CLASS)
            self.state = 44
            self.match(Q2Parser.Identifier)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Q2Parser.EXTENDS:
                self.state = 45
                self.match(Q2Parser.EXTENDS)
                self.state = 46
                self.match(Q2Parser.Identifier)


            self.state = 49
            self.match(Q2Parser.L_BRACE)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Q2Parser.BOOLEAN) | (1 << Q2Parser.INT) | (1 << Q2Parser.Identifier))) != 0):
                self.state = 50
                self.varDeclaration()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Q2Parser.PUBLIC:
                self.state = 56
                self.methodDeclaration()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(Q2Parser.R_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def type_t(self):
            return self.getTypedRuleContext(Q2Parser.Type_tContext,0)


        def Identifier(self):
            return self.getToken(Q2Parser.Identifier, 0)

        def SEMI(self):
            return self.getToken(Q2Parser.SEMI, 0)

        def getRuleIndex(self):
            return Q2Parser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = Q2Parser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.type_t()
            self.state = 65
            self.match(Q2Parser.Identifier)
            self.state = 66
            self.match(Q2Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def PUBLIC(self):
            return self.getToken(Q2Parser.PUBLIC, 0)

        def type_t(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q2Parser.Type_tContext)
            else:
                return self.getTypedRuleContext(Q2Parser.Type_tContext,i)


        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(Q2Parser.Identifier)
            else:
                return self.getToken(Q2Parser.Identifier, i)

        def L_PAREN(self):
            return self.getToken(Q2Parser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(Q2Parser.R_PAREN, 0)

        def L_BRACE(self):
            return self.getToken(Q2Parser.L_BRACE, 0)

        def RETURN(self):
            return self.getToken(Q2Parser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(Q2Parser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(Q2Parser.SEMI, 0)

        def R_BRACE(self):
            return self.getToken(Q2Parser.R_BRACE, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q2Parser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(Q2Parser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Q2Parser.StatementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Q2Parser.COMMA)
            else:
                return self.getToken(Q2Parser.COMMA, i)

        def getRuleIndex(self):
            return Q2Parser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = Q2Parser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(Q2Parser.PUBLIC)
            self.state = 69
            self.type_t()
            self.state = 70
            self.match(Q2Parser.Identifier)
            self.state = 71
            self.match(Q2Parser.L_PAREN)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Q2Parser.BOOLEAN) | (1 << Q2Parser.INT) | (1 << Q2Parser.Identifier))) != 0):
                self.state = 72
                self.type_t()
                self.state = 73
                self.match(Q2Parser.Identifier)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Q2Parser.COMMA:
                    self.state = 74
                    self.match(Q2Parser.COMMA)
                    self.state = 75
                    self.type_t()
                    self.state = 76
                    self.match(Q2Parser.Identifier)
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 85
            self.match(Q2Parser.R_PAREN)
            self.state = 86
            self.match(Q2Parser.L_BRACE)
            self.state = 90
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 87
                    self.varDeclaration() 
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Q2Parser.T__0) | (1 << Q2Parser.IF) | (1 << Q2Parser.WHILE) | (1 << Q2Parser.L_BRACE) | (1 << Q2Parser.Identifier))) != 0):
                self.state = 93
                self.statement()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(Q2Parser.RETURN)
            self.state = 100
            self.expression(0)
            self.state = 101
            self.match(Q2Parser.SEMI)
            self.state = 102
            self.match(Q2Parser.R_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_tContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()


        def getRuleIndex(self):
            return Q2Parser.RULE_type_t

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.value_attr = ctx.value_attr
            self.type_attr = ctx.type_attr



    class BoolContext(Type_tContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q2Parser.Type_tContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN(self):
            return self.getToken(Q2Parser.BOOLEAN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(Type_tContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q2Parser.Type_tContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(Q2Parser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(Type_tContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q2Parser.Type_tContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(Q2Parser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)


    class Array_intContext(Type_tContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q2Parser.Type_tContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(Q2Parser.INT, 0)
        def L_BRACK(self):
            return self.getToken(Q2Parser.L_BRACK, 0)
        def R_BRACK(self):
            return self.getToken(Q2Parser.R_BRACK, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_int" ):
                listener.enterArray_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_int" ):
                listener.exitArray_int(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_int" ):
                return visitor.visitArray_int(self)
            else:
                return visitor.visitChildren(self)



    def type_t(self):

        localctx = Q2Parser.Type_tContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_t)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = Q2Parser.Array_intContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(Q2Parser.INT)
                self.state = 105
                self.match(Q2Parser.L_BRACK)
                self.state = 106
                self.match(Q2Parser.R_BRACK)
                pass

            elif la_ == 2:
                localctx = Q2Parser.BoolContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(Q2Parser.BOOLEAN)
                pass

            elif la_ == 3:
                localctx = Q2Parser.IntContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(Q2Parser.INT)
                pass

            elif la_ == 4:
                localctx = Q2Parser.IdContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.match(Q2Parser.Identifier)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()


        def getRuleIndex(self):
            return Q2Parser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.value_attr = ctx.value_attr
            self.type_attr = ctx.type_attr



    class Braket_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q2Parser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def L_BRACE(self):
            return self.getToken(Q2Parser.L_BRACE, 0)
        def R_BRACE(self):
            return self.getToken(Q2Parser.R_BRACE, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Q2Parser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBraket_statement" ):
                listener.enterBraket_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBraket_statement" ):
                listener.exitBraket_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBraket_statement" ):
                return visitor.visitBraket_statement(self)
            else:
                return visitor.visitChildren(self)


    class PrintContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q2Parser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def L_PAREN(self):
            return self.getToken(Q2Parser.L_PAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(Q2Parser.ExpressionContext,0)

        def R_PAREN(self):
            return self.getToken(Q2Parser.R_PAREN, 0)
        def SEMI(self):
            return self.getToken(Q2Parser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)


    class Equal_array_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q2Parser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(Q2Parser.Identifier, 0)
        def L_BRACK(self):
            return self.getToken(Q2Parser.L_BRACK, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Q2Parser.ExpressionContext,i)

        def R_BRACK(self):
            return self.getToken(Q2Parser.R_BRACK, 0)
        def ASSIGN(self):
            return self.getToken(Q2Parser.ASSIGN, 0)
        def SEMI(self):
            return self.getToken(Q2Parser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqual_array_statement" ):
                listener.enterEqual_array_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqual_array_statement" ):
                listener.exitEqual_array_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual_array_statement" ):
                return visitor.visitEqual_array_statement(self)
            else:
                return visitor.visitChildren(self)


    class Equal_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q2Parser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(Q2Parser.Identifier, 0)
        def ASSIGN(self):
            return self.getToken(Q2Parser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(Q2Parser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(Q2Parser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqual_statement" ):
                listener.enterEqual_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqual_statement" ):
                listener.exitEqual_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual_statement" ):
                return visitor.visitEqual_statement(self)
            else:
                return visitor.visitChildren(self)


    class If_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q2Parser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(Q2Parser.IF, 0)
        def L_PAREN(self):
            return self.getToken(Q2Parser.L_PAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(Q2Parser.ExpressionContext,0)

        def R_PAREN(self):
            return self.getToken(Q2Parser.R_PAREN, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Q2Parser.StatementContext,i)

        def ELSE(self):
            return self.getToken(Q2Parser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)


    class While_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q2Parser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(Q2Parser.WHILE, 0)
        def L_PAREN(self):
            return self.getToken(Q2Parser.L_PAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(Q2Parser.ExpressionContext,0)

        def R_PAREN(self):
            return self.getToken(Q2Parser.R_PAREN, 0)
        def statement(self):
            return self.getTypedRuleContext(Q2Parser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_statement" ):
                return visitor.visitWhile_statement(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):
